# AI_Investor_System

./: .dockerignore  .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README-Mac.md  README-Windows.md  README.md  pyproject.toml  run_gui.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
experiments/: base.yaml  exp_baseline.yml  exp_tech_lstm_softmax.yaml
experiments/allocator/: meanvar.yaml  rl.yaml  softmax.yaml
experiments/features/: corr.yaml  events.yaml  graph.yaml  sent.yaml  tech.yaml
experiments/model/: baseline.yaml  gnn.yaml  lstm.yaml  transformer.yaml
requirements/: base.txt  developer.txt  torch_cuda118.txt  torch_mps_macos.txt
requirements/torch/: windows-cpu.txt  windows-gpu.txt
src/system/Controller/: allocation_manager.py  cache_manager.py  feature_pipeline.py  preview_manager.py  price_manager.py  reporting_manager.py  run_manager.py  training_manager.py
src/system/Model/: artifact_store.py  experiment_config.py
src/system/Model/allocation/: meanvar.py  rl.py  softmax.py
src/system/Model/backtesting/: backtester.py
src/system/Model/data/: data_validator.py  trading_calendar.py
src/system/Model/evaluation/: backtester.py  prediction_metrics.py
src/system/Model/features/: correlation.py  graph.py  stat_vol.py  technical_features.py
src/system/Model/preprocessing/: graph_dataset.py  scaler.py  sequence_dataset.py  splitter.py
src/system/Model/reporting/: report_builder.py
src/system/View/: cli.py  gui.py
tests/: test_smoke.py
(+11 files in other folders)
