[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-investor-system"
version = "0.1.0"
description = "Research platform for stock prediction & portfolio optimization."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name="Alexander Lebedev"}]
license = { text = "MIT" }
dependencies = []  # install via requirements/*.txt

[tool.setuptools.packages.find]
where = ["src"]
include = ["system*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]